Cleaned samples generation and description

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -2202,6 +2202,45 @@
 % reserved for new journals which are not assigned an ISSN yet.
 %
 %
+%\subsection{Samples}
+%\label{sec:samples}
+%
+% There are several samples of acmart documents, that can serve as
+% templates for the authors.  Among them
+% |sample-sig...| are templates for conference papers, while
+% |sample-acm...| are templates for journal articles and special
+% materials.
+%
+% Here is the list of the samples:
+% \begin{description}
+% \item[sample-manuscript:] A proceedings paper in the manuscript format.
+% \item[sample-acmsmall:] A journal paper in the |acmsmall| format.
+% \item[sample-acmsmall-biblatex:] A journal paper using experimental
+% \textsl{biblatex} bibliography processing.
+% \item[sample-acmlarge:] A journal paper in the |acmlarge| format.
+% \item[sample-acmtog:] A journal paper in the |acmtog| format.
+% \item[sample-sigconf:] A proceedings paper in the standard |sigconf|
+% format.
+% \item[sample-sigconf-biblatex:] A proceedings paper in the |sigconf|
+% format using experimental \textsl{biblatex} bibliography
+% processing.
+% \item[sample-sigconf-authordraft:] A proceedings paper in the
+% |sigconf| format with the |authordraft| option selected.
+% \item[sample-sigconf-i13n:] A proceedings paper in the
+% |sigconf| format with multilanguage titles and abstract.
+% \item[sample-sigconf-xelatex:] A proceedings paper in the
+% |sigconf| format, Xe\LaTeX\ version.
+% \item[sample-sigconf-lualatex:] A proceedings paper in the
+% |sigconf| format, Lua\LaTeX\ version.
+% \item[sample-sigplan:] A proceedings paper in the |sigplan| format.
+% \item[sample-acmsmall-conf:] A proceedings paper in the |acmsmall|
+% format for the publication in a journal using this option.
+% \item[sample-acmcp:] A sample of ACM Cover Page used by JDS.
+% \item[sample-acmengage:] A sample of ACM Engage publication.
+% \end{description}
+%
+%
+%
 %\subsection{A note about \texttt{sigchi-a} format}
 %\label{sec:sigchi-a}
 %
@@ -2266,7 +2305,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2024/01/21 v2.02 Typesetting articles for the Association for Computing Machinery]
+[2024/02/04 v2.03 Typesetting articles for the Association for Computing Machinery]
 %    \end{macrocode}
 %
 % \changes{v1.00}{2016/04/14}{First released version}
@@ -2382,6 +2421,7 @@
 % throughout} 
 % \changes{v1.93}{2023/10/22}{Added PACMSE journal option}
 % \changes{v2.01}{2024/01/06}{Documentation update: POMACS uses acmsmall}
+% \changes{v2.03}{2024/02/04}{Added documentation about samples}
 % 
 % And the driver code:
 %    \begin{macrocode}
