--- a/acmart.dtx
+++ b/acmart.dtx
@@ -2243,6 +2243,7 @@
 % format for the publication in a journal using this option.
 % \item[sample-acmcp:] A sample of ACM Cover Page used by JDS.
 % \item[sample-acmengage:] A sample of ACM Engage publication.
+% \item[sample-acmsmall-tagged:] An experimental tagged paper.
 % \end{description}
 %
 %
