eSSN is now printed before pSSN

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -2309,7 +2309,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2024/02/04 v2.03 Typesetting articles for the Association for Computing Machinery]
+[2024/03/17 v2.04 Typesetting articles for the Association for Computing Machinery]
 %    \end{macrocode}
 %
 % \changes{v1.00}{2016/04/14}{First released version}
@@ -3526,10 +3526,13 @@
 % \changes{v1.76}{2021/02/21}{Moved hyperxmp before hyperref, see
 % \url{https://github.com/borisveytsman/acmart/issues/425}}
 % \changes{1.92}{2023/10/14}{Moved hyperxmp again due to kernel update}
+% \changes{2.04}{2024/03/17}{Explicitly load ifdraft since hyperxmp
+% tries to load it inside a group}
 %    \begin{macrocode}
 \let\@footnotemark@nolink\@footnotemark
 \let\@footnotetext@nolink\@footnotetext
 \RequirePackage[bookmarksnumbered,unicode]{hyperref}
+\RequirePackage{ifdraft}
 \RequirePackage{hyperxmp}
 \pdfstringdefDisableCommands{%
   \def\addtocounter#1#2{}%
@@ -4797,12 +4800,13 @@
 % \end{macro}
 %
 % The defaults:
+% \changes{v2.04}{2024/03/17}{eISSN is printed, rather than pSSN}
 %    \begin{macrocode}
 \def\@journalCode@nr{0}
 \def\@journalName{}%
 \def\@journalNameShort{\@journalName}%
 \def\@permissionCodeOne{XXXX-XXXX}%
-\def\@permissionCodeTwo{}%
+\def\@permissionCodeTwo{\@permissionCodeOne}%
 %    \end{macrocode}
 %
 %
@@ -6406,7 +6410,7 @@
         \else
           \if@ACM@nonacm\else
             \if@ACM@journal@bibstrip
-              ACM~\@permissionCodeOne/\@acmYear/\@acmMonth-ART\@acmArticle\\
+              ACM~\@permissionCodeTwo/\@acmYear/\@acmMonth-ART\@acmArticle\\
               \@formatdoi{\@acmDOI}%
             \else % Conference
               \ifx\@acmISBN\@empty\else ACM~ISBN~\@acmISBN\\\fi
