Wording change in rightsretained

--- a/README
+++ b/README
@@ -14,6 +14,7 @@ Changes
 
 Version 2.04.  Compatibility with the new latex-dev format
                eSSN is always printed, even if pSSN is present
+	       Wording change in copyright statement
 
 Version 2.03.  Cleaned generation of samples.
 	       New options for printing conference proceedings
