--- a/acmart.dtx
+++ b/acmart.dtx
@@ -2309,7 +2309,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2024/03/17 v2.04 Typesetting articles for the Association for Computing Machinery]
+[2024/03/28 v2.04 Typesetting articles for the Association for Computing Machinery]
 %    \end{macrocode}
 %
 % \changes{v1.00}{2016/04/14}{First released version}
@@ -5899,6 +5899,7 @@
 % \changes{v1.52}{2018/04/09}{Rewording of licenses}
 % \changes{v1.85}{2022/05/08}{Added CC licenses}
 % \changes{v2.00}{2023/10/22}{Changed wording}
+% \changes{v2.04}{2024/03/28}{Changed wording}
 %   Here is the owner of the copyright
 %    \begin{macrocode}
 \def\@copyrightowner{%
@@ -5989,6 +5990,7 @@
 % \changes{v1.87}{2022/07/30}{CC licenses now are allowed only for
 % non-acm or ACM engage publications}
 % \changes{v2.00}{2023/10/24}{Rewrote wording}
+% \changes{v2.00}{2023/10/24}{Rewrote wording}
 %   The canned permission block.
 %    \begin{macrocode}
 \def\@copyrightpermission{%
@@ -6016,7 +6018,7 @@
    and\hspace*{.5pt}/or a fee. Request permissions from
    permissions@acm.org. 
   \or % rightsretained
-   Permission to make digital or hard copies of part or all of this
+   Permission to make digital or hard copies of all or part of this
    work for personal or classroom use is granted without fee provided
    that copies are not made or distributed for profit or commercial
    advantage and that copies bear this notice and the full citation on
