--- a/README
+++ b/README
@@ -12,6 +12,8 @@ The production version is the one on CTAN and ACM sites.
 
 Changes
 
+Version 2.05.  Changed title for TELO.
+
 Version 2.04.  Compatibility with the new latex-dev format
                eSSN is always printed, even if pSSN is present
 	       Wording change in copyright statement
