--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -178,17 +178,14 @@
 \email{webmaster@marysville-ohio.com}
 \affiliation{%
   \institution{Institute for Clarity in Documentation}
-  \streetaddress{P.O. Box 1212}
   \city{Dublin}
   \state{Ohio}
   \country{USA}
-  \postcode{43017-6221}
 }
 
 \author{Lars Th{\o}rv{\"a}ld}
 \affiliation{%
   \institution{The Th{\o}rv{\"a}ld Group}
-  \streetaddress{1 Th{\o}rv{\"a}ld Circle}
   \city{Hekla}
   \country{Iceland}}
 \email{larst@affiliation.org}
@@ -203,7 +200,6 @@
 \author{Aparna Patel}
 \affiliation{%
  \institution{Rajiv Gandhi University}
- \streetaddress{Rono-Hills}
  \city{Doimukh}
  \state{Arunachal Pradesh}
  \country{India}}
@@ -211,7 +207,6 @@
 \author{Huifen Chan}
 \affiliation{%
   \institution{Tsinghua University}
-  \streetaddress{30 Shuangqing Rd}
   \city{Haidian Qu}
   \state{Beijing Shi}
   \country{China}}
@@ -219,17 +214,14 @@
 \author{Charles Palmer}
 \affiliation{%
   \institution{Palmer Research Laboratories}
-  \streetaddress{8600 Datapoint Drive}
   \city{San Antonio}
   \state{Texas}
-  \country{USA}
-  \postcode{78229}}
+  \country{USA}}
 \email{cpalmer@prl.com}
 
 \author{John Smith}
 \affiliation{%
   \institution{The Th{\o}rv{\"a}ld Group}
-  \streetaddress{1 Th{\o}rv{\"a}ld Circle}
   \city{Hekla}
   \country{Iceland}}
 \email{jsmith@affiliation.org}
