Patching lstinputlisting and lstinputlisting* % to prevent spurious space warnings}
Same approach as lstlisting to prevent spurious space warnings

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -4029,6 +4029,10 @@
   \let\@vspacer\@vspacer@orig}
 \AtBeginEnvironment{listing*}{\let\@vspace\@vspace@orig
   \let\@vspacer\@vspacer@orig}
+\AtBeginEnvironment{lstinputlisting}{\let\@vspace\@vspace@orig
+  \let\@vspacer\@vspacer@orig}
+\AtBeginEnvironment{lstinputlisting*}{\let\@vspace\@vspace@orig
+  \let\@vspacer\@vspacer@orig}
 
 %    \end{macrocode}
 %
