--- a/README
+++ b/README
@@ -12,6 +12,8 @@ The production version is the one on CTAN and ACM sites.
 
 Changes
 
+Version 2.07.  Corrected typo in TELO eISSN.
+
 Version 2.06.  Added eISSN for a number of journals.
                ACM no longer collects or prints authors'
 	       postal addresses
