--- a/README
+++ b/README
@@ -12,7 +12,8 @@ The production version is the one on CTAN and ACM sites.
 
 Changes
 
-Version 2.08.  Section titles are in lowercase now
+Version 2.08.  Section titles are in lowercase now.
+	       Documentation updates.
 
 Version 2.07.  Corrected typo in TELO eISSN.
 
